--- a/calendar.html
+++ b/calendar.html
@@ -120,12 +120,12 @@
                 </div>
             </nav>
 
-            <!-- Code for Google Calendar 
+            <!-- Code for Google Calendar -->
             <div class="googleCalendar">
                 <iframe src="https://calendar.google.com/calendar/embed?height=800&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=ihnanewark1%40gmail.com&amp;color=%231B887A&amp;ctz=America%2FNew_York"
                     style="border-width:0" width="1400" height="1000" frameborder="0" scrolling="no"></iframe>
             </div>
-                -->
+
 
             <!-- jQuery CDN - Slim version (=without AJAX) -->
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
