new calendar + button fix

--- a/calendar.html
+++ b/calendar.html
@@ -120,11 +120,9 @@
                 </div>
             </nav>
 
-            <!-- Code for Google Calendar -->
-            <div class="googleCalendar">
-                <iframe src="https://calendar.google.com/calendar/embed?height=800&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=ihnanewark1%40gmail.com&amp;color=%231B887A&amp;ctz=America%2FNew_York"
-                    style="border-width:0" width="1400" height="1000" frameborder="0" scrolling="no"></iframe>
-            </div>
+            <!-- Code for Calendar -->
+            <script src="https://calendar.time.ly/embed.js" data-src="https://calendar.time.ly/fcz0s6k7/"
+                data-max-height="0" id="timely_script" class="timely-script"></script>
 
 
             <!-- jQuery CDN - Slim version (=without AJAX) -->
